# hexlet_pytest

./: .coverage  README.md  pyproject.toml
hexlet_pytest/: example.py
tests/: test_example.py  test_stuck.py
